[project]
name = "spht"
version = "0.1.0"
description = ""
authors = [
    {name = "Conservation Biology Institute"}
]
license = {text = "BSD-2-Clause"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "ncdjango (>=1.4.0,<2.0.0)",
    "django-webpack-loader (>=3.2.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "mercantile (>=1.2.1,<2.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
    "weasyprint (>=66.0,<67.0)",
    "geopy (>=2.4.1,<2.5)",
    "trefoil @ git+https://github.com/consbio/trefoil.git@main",
    "setuptools (>=80.9.0,<81.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
]

[project.optional-dependencies]
gdal = [
    "gdal"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"

